Added Gorm foreign keys for plans
