# internal/model/plan.go
@@ -12,13 +12,15 @@ type Plans struct {
 	//The id for the plan
 	// in: path
 	//required: true
-	ID string `gorm:"column:id;primaryKey,unique;type:uuid"`
+	ID *string `gorm:"type:uuid" json:"id"`
 	// The Name for the plan
 	//required: true
-	Name string `gorm:"column:name;type:varchar(100)"`
-	// the Description for the plan
+	Name string `gorm:"not null;unique" json:"name"`
+	// The Description for the plan
 	//required: true
-	Description string `gorm:"column:description;type:text"`
+	Description string `gorm:"not null" json:"description"`
+	// PlanQuotaDefaults []PlanQuotaDefaults `json:"quota_defaults"`
+
 }
 
 func (p *Plans) TableName() string {
@@ -29,22 +31,11 @@ func (p *Plans) TableName() string {
 // swagger:model
 type PlanQuotaDefaults struct {
 	gorm.Model
-	//The id for the plan.
-	// in: path
-	//required: true
-	ID string `gorm:"column:id;primaryKey;type:uuid"`
-	// The QuotaValue for the Quota.
-	// in: path
-	//required: false
-	QuotaValue float64 `gorm:"column:quota_value;type:numeric"`
-	// The PlanID for the PlanQuotaDefault.
-	//required: false
-	PlanID string
-	Plans  Plans `gorm:"foreignKey:PlanID;references:ID;"`
-	// The ResourceTypeID for the PlanQuotaDefault.
-	//required: false
-	ResourceTypeID string
-	ResourceTypes  ResourceTypes `gorm:"foreignKey:ResourceTypeID;references:ID"`
+	ID             *string       `gorm:"type:uuid" json:"id"`
+	PlanID         *string       `gorm:"type:uuid;not null" json:"-"`
+	ResourceTypeID *string       `gorm:"type:uuid;not null" json:"-"`
+	QuotaValue     float64       `gorm:"not null"`
+	ResourceType   ResourceTypes `json:"resource_type"`
 }
 
 func (pqd *PlanQuotaDefaults) TableName() string {
@@ -58,34 +49,33 @@ type UserPlans struct {
 	//The id for the UserPlans.
 	// in: path
 	//required: true
-	ID string `gorm:"column:id;primaryKey;type:uuid"`
+	ID *string `gorm:"type:uuid" json:"id"`
 	//The effective start date of the plan for the user.
 	// in: path
 	//required: false
-	EffectiveStartDate time.Time `gorm:"column:effective_start_date;type:date"`
+	EffectiveStartDate time.Time `gorm:"json:effective_start_date;type:date"`
 	//The effective end date of the plan for the user.
 	// in: path
 	//required: false
-	EffectiveEndDate time.Time `gorm:"column:effective_end_date;type:date"`
+	EffectiveEndDate time.Time `gorm:"json:effective_end_date;type:date"`
 	//Added by:.
 	// in: path
 	//required: false
-	AddedBy string `gorm:"column:added_by;type:varchar(100)"`
+	AddedBy string `gorm:"json:added_by;type:varchar(100)"`
 	//The last modified of the plan for the user.
 	// in: path
 	//required: false
-	LastModifiedBy string `gorm:"column:last_modified_by;type:varchar(100)"`
+	LastModifiedBy string `gorm:"json:last_modified_by;type:varchar(100)"`
 	//The UserID for the user.
 	// in: path
 	//required: true
-	UserID string
-	Users  Users `gorm:"foreignKey:UserID;references:ID;"`
+	UserID *string `gorm:"type:uuid;not null" json:"-"`
+	User   Users   `json:"users"`
 
-	//The planID for the user.
-	// in: path
-	//required: true
-	PlanID string
-	Plans  Plans `gorm:"foreignKey:PlanID;references:ID;"`
+	// //The planID for the user.
+	// // in: path
+	// //required: true
+	PlanID *string `gorm:"type:uuid;not null" json:"-"`
 }
 
 func (up *UserPlans) TableName() string {
