# swagger.json
@@ -210,9 +210,6 @@
     "PlanQuotaDefaults": {
       "type": "object",
       "title": "PlanQuotaDefaults define the structure for an Api Plan and Quota.",
-      "required": [
-        "ID"
-      ],
       "properties": {
         "CreatedAt": {
           "type": "string",
@@ -222,31 +219,23 @@
           "$ref": "#/definitions/DeletedAt"
         },
         "ID": {
-          "description": "The id for the plan.\nin: path",
-          "type": "string"
-        },
-        "PlanID": {
-          "description": "The PlanID for the PlanQuotaDefault.",
-          "type": "string"
-        },
-        "Plans": {
-          "$ref": "#/definitions/Plans"
+          "type": "integer",
+          "format": "uint64"
         },
         "QuotaValue": {
-          "description": "The QuotaValue for the Quota.\nin: path",
           "type": "number",
           "format": "double"
-        },
-        "ResourceTypeID": {
-          "description": "The ResourceTypeID for the PlanQuotaDefault.",
-          "type": "string"
-        },
-        "ResourceTypes": {
-          "$ref": "#/definitions/ResourceTypes"
         },
         "UpdatedAt": {
           "type": "string",
           "format": "date-time"
+        },
+        "id": {
+          "type": "string",
+          "x-go-name": "ID"
+        },
+        "resource_type": {
+          "$ref": "#/definitions/ResourceTypes"
         }
       },
       "x-go-package": "github.com/cyverse/QMS/internal/model"
@@ -255,22 +244,25 @@
       "type": "object",
       "title": "Plans define the structure for an Api Plan.",
       "required": [
-        "ID",
-        "Name",
-        "Description"
+        "id",
+        "name",
+        "description"
       ],
       "properties": {
-        "Description": {
-          "description": "the Description for the plan",
-          "type": "string"
+        "description": {
+          "description": "The Description for the plan",
+          "type": "string",
+          "x-go-name": "Description"
         },
-        "ID": {
+        "id": {
           "description": "The id for the plan\nin: path",
-          "type": "string"
+          "type": "string",
+          "x-go-name": "ID"
         },
-        "Name": {
+        "name": {
           "description": "The Name for the plan",
-          "type": "string"
+          "type": "string",
+          "x-go-name": "Name"
         }
       },
       "x-go-package": "github.com/cyverse/QMS/internal/model"
@@ -334,15 +326,11 @@
       "type": "object",
       "title": "ResourceTypes define the structure for ResourceTypes.",
       "required": [
-        "ID",
+        "id",
         "Name",
         "Unit"
       ],
       "properties": {
-        "ID": {
-          "description": "The id for the Resource.\nin: path",
-          "type": "string"
-        },
         "Name": {
           "description": "The Name for the Resource.\nin: path",
           "type": "string"
@@ -350,6 +338,11 @@
         "Unit": {
           "description": "the Unit/measure for the Resource.\nin: path",
           "type": "string"
+        },
+        "id": {
+          "description": "The id for the Resource.\nin: path",
+          "type": "string",
+          "x-go-name": "ID"
         }
       },
       "x-go-package": "github.com/cyverse/QMS/internal/model"
@@ -413,9 +406,7 @@
       "type": "object",
       "title": "UserPlans define the structure for the API User plans.",
       "required": [
-        "ID",
-        "UserID",
-        "PlanID"
+        "id"
       ],
       "properties": {
         "AddedBy": {
@@ -440,29 +431,23 @@
           "format": "date-time"
         },
         "ID": {
-          "description": "The id for the UserPlans.\nin: path",
-          "type": "string"
+          "type": "integer",
+          "format": "uint64"
         },
         "LastModifiedBy": {
           "description": "The last modified of the plan for the user.\nin: path",
           "type": "string"
         },
-        "PlanID": {
-          "description": "The planID for the user.\nin: path",
-          "type": "string"
-        },
-        "Plans": {
-          "$ref": "#/definitions/Plans"
-        },
         "UpdatedAt": {
           "type": "string",
           "format": "date-time"
         },
-        "UserID": {
-          "description": "The UserID for the user.\nin: path",
-          "type": "string"
+        "id": {
+          "description": "The id for the UserPlans.\nin: path",
+          "type": "string",
+          "x-go-name": "ID"
         },
-        "Users": {
+        "users": {
           "$ref": "#/definitions/Users"
         }
       },
